Kubernetes/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 2 # basic setup, scale up using hpa.yaml
  
  selector:
    matchLabels:
      app: hello-world
  
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: flask-app
        image: hello-world:1
        imagePullPolicy: IfNotPresent # local testing
        
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 60
          timeoutSeconds: 5
          failureThreshold: 3
        
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 2

---

apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  labels:
    app: hello-world
spec:
  type: ClusterIP # only internal
  
  selector:
    app: hello-world
  
  ports:
  - name: http
    port: 8080        # service listen port
    targetPort: 8080  # port in pod
    protocol: TCP
